// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary should catch an error and render fallback UI 1`] = `
<div>
  <h1>
    Something went wrong...
  </h1>
</div>
`;

exports[`ErrorBoundary should render its children when there is no error 1`] = `
<div>
  <h1>
    All is well
  </h1>
</div>
`;
